// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VBtnToggle.js Render component and match snapshot(s) only defaults 1`] = `

<div class="btn-toggle">
</div>

`;

exports[`VBtnToggle.js should allow deselecting a value when mandatory prop is used with multiple prop 1`] = `

<div class="btn-toggle btn-toggle--selected">
  <button type="button"
          class="btn btn--flat"
  >
    <div class="btn__content">
      <i class="material-icons icon">
        add
      </i>
    </div>
  </button>
  <button type="button"
          class="btn btn--flat btn--active"
          data-selected="true"
  >
    <div class="btn__content">
      <i class="material-icons icon">
        add
      </i>
    </div>
  </button>
  <button type="button"
          class="btn btn--flat btn--active"
          data-selected="true"
  >
    <div class="btn__content">
      <i class="material-icons icon">
        add
      </i>
    </div>
  </button>
</div>

`;

exports[`VBtnToggle.js should allow new value when mandatory prop is used 1`] = `

<div class="btn-toggle btn-toggle--selected">
  <button type="button"
          class="btn btn--flat"
  >
    <div class="btn__content">
      <i class="material-icons icon">
        add
      </i>
    </div>
  </button>
  <button type="button"
          class="btn btn--flat btn--active"
          data-selected="true"
          data-only-child="true"
  >
    <div class="btn__content">
      <i class="material-icons icon">
        add
      </i>
    </div>
  </button>
  <button type="button"
          class="btn btn--flat"
  >
    <div class="btn__content">
      <i class="material-icons icon">
        add
      </i>
    </div>
  </button>
</div>

`;

exports[`VBtnToggle.js should allow new value when mandatory prop is used with multiple prop 1`] = `

<div class="btn-toggle btn-toggle--selected">
  <button type="button"
          class="btn btn--flat"
  >
    <div class="btn__content">
      <i class="material-icons icon">
        add
      </i>
    </div>
  </button>
  <button type="button"
          class="btn btn--flat btn--active"
          data-selected="true"
          data-only-child="true"
  >
    <div class="btn__content">
      <i class="material-icons icon">
        add
      </i>
    </div>
  </button>
  <button type="button"
          class="btn btn--flat"
  >
    <div class="btn__content">
      <i class="material-icons icon">
        add
      </i>
    </div>
  </button>
</div>

`;

exports[`VBtnToggle.js should not allow empty value when mandatory prop is used 1`] = `

<div class="btn-toggle btn-toggle--selected">
  <button type="button"
          class="btn btn--flat btn--active"
          data-selected="true"
          data-only-child="true"
  >
    <div class="btn__content">
      <i class="material-icons icon">
        add
      </i>
    </div>
  </button>
  <button type="button"
          class="btn btn--flat"
  >
    <div class="btn__content">
      <i class="material-icons icon">
        add
      </i>
    </div>
  </button>
  <button type="button"
          class="btn btn--flat"
  >
    <div class="btn__content">
      <i class="material-icons icon">
        add
      </i>
    </div>
  </button>
</div>

`;

exports[`VBtnToggle.js should not allow empty value when mandatory prop is used with multiple prop 1`] = `

<div class="btn-toggle btn-toggle--selected">
  <button type="button"
          class="btn btn--flat"
  >
    <div class="btn__content">
      <i class="material-icons icon">
        add
      </i>
    </div>
  </button>
  <button type="button"
          class="btn btn--flat btn--active"
          data-selected="true"
          data-only-child="true"
  >
    <div class="btn__content">
      <i class="material-icons icon">
        add
      </i>
    </div>
  </button>
  <button type="button"
          class="btn btn--flat"
  >
    <div class="btn__content">
      <i class="material-icons icon">
        add
      </i>
    </div>
  </button>
</div>

`;

exports[`VBtnToggle.js should use button value attribute if available 1`] = `

<div class="btn-toggle btn-toggle--selected">
  <button type="button"
          class="btn btn--flat"
          value="left"
  >
    <div class="btn__content">
      <i class="material-icons icon">
        add
      </i>
    </div>
  </button>
  <button type="button"
          class="btn btn--flat btn--active"
          value="center"
          data-selected="true"
          data-only-child="true"
  >
    <div class="btn__content">
      <i class="material-icons icon">
        add
      </i>
    </div>
  </button>
  <button type="button"
          class="btn btn--flat"
          value="right"
  >
    <div class="btn__content">
      <i class="material-icons icon">
        add
      </i>
    </div>
  </button>
</div>

`;
